--- a/WebContent/s07.html
+++ b/WebContent/s07.html
@@ -7,11 +7,11 @@
 <!-- 
     <script src=".\js\jquery-3.4.1.min.js"></script>
  -->
-<script type="text/javascript">
+<script type="text/javascript"> /* fa una chiamata al codice JAVA usando AJAX e non request e response */
     $(function() {
         $('#btnPlain').click(function() {
-            $.ajax({
-                url : "s07.txt",
+            $.ajax({ /* fa una chiamata AJAX al click. Passo oggetto .ajax che ha dentro l'indirizzo e se ha successo prende "data" e lo mette come testo nell'elemento che ha quell'id */
+                url : "s07.txt", /*$.ajax è come dichiarare l'oggetto xhr */
                 success : function(data) {
                     $('#targetPlain').text(data);
                 }
@@ -19,19 +19,19 @@
         })
 
         $('#btnLoad').click(function() {
-            $('#targetLoad').load('s07.txt');
+            $('#targetLoad').load('s07.txt'); /* funzione load: carica il risultato della get della risorsa indicizzata(targetload) come get lì dentro.c'è una chiamata ad ajax ion load */
         });
 
         $('#btnLoadSrv').click(function() {
-            $('#targetLoadSrv').load('/edwpot/s07/timerPlain');
-        });
+            $('#targetLoadSrv').load('/edwpot/s07/timerPlain');/* posso anche passargli una servlet che ritorna testo semplice e butta la sua risposta nell'elemento #targetLoadSrv*/
+        }); /* quando si usa input */
 
         $('#btnGetSrv').click(function() {
-            $.get('/edwpot/s07/timerPlain', function(data) {
-                $('#targetGetSrv').val(data);
-            });
+            $.get('/edwpot/s07/timerPlain', function(data) {/*  voglio fare una get di questa risorsa. il risultato va in pasto alla  function(data). fa una chiamata ad ajax. la response la metto in (data) e la gestisco */
+                $('#targetGetSrv').val(data); /* mette il testo dentro una input, è un metodo jquery. scrive nel value associato alla input */
+            });/* per paragrafo */
         });
-    });
+    });  
 </script>
 </head>
 <body>
