--- a/WebContent/Vinili.html
+++ b/WebContent/Vinili.html
@@ -3,8 +3,16 @@
 <head>
 <meta charset="ISO-8859-1">
 <title>My Band</title>
+<link rel="stylesheet" type="text/css" href="./WebContent/css/vinili.css" />
 </head>
 <body>
+ 
+<!--  <form action="details" method="get">
+ User Name: <input type="text" name="uname"><br>
+ User Age: <input type="text" name="uage"><br>
+ <input type="submit" value="submit">  
+</form> -->
+
 	<h3>
 		<i>My band...thief</i>
 	</h3>
@@ -102,4 +110,5 @@
 
 	</div>
 </body>
+
 </html>
