mvc4 fino a "sql"

--- a/WebContent/ViniliBand.html
+++ b/WebContent/ViniliBand.html
@@ -50,9 +50,9 @@
 <br>
 
 </form>
-
+<form action="/edwpot/s08/Vinili" method ="post"> 
 <button type="submit" name ="compra">Compra</button>
-
+</form>
 </body>
 </html>
 
